--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div>
-                <h3 id="guest-text">GUEST</h3>
+                <h3 id="guest-text">AWAY</h3>
                 <h4 class="points-text" id="guest-points-text">0</h4>
                 <div>
                     <p class="border" id="guest-plus-one" onclick="guestPlusOne()">+1</p>
